...
      padding: EdgeInsetsDirectional.fromSTEB(0, 0, 10, 0),
      child: Container(
        width: MediaQuery.of(context).size.width * 0.4,
        decoration: BoxDecoration(),
        alignment: AlignmentDirectional(0, 0),
        child: TextFormField(
          key: (Key("Create.firstNameTextField")),
          autofillHints: [AutofillHints.givenName],
          cursorColor: FlutterFlowTheme.secondaryColor,
          validator: (value) {
            if (value == null || value.isEmpty) {
              return "Please provide a value";
            }
            var firstUpperCase = value.substring(0, 1).toUpperCase();
            if (!Validator.isValidName(value)) {
              return "Please provide a valid first name";
            } else if (value.substring(0, 1) != firstUpperCase) {
              return "Please capitalize your name";
            }
            if (Validator.hasProfanity(value)) {
              // We want to allow the use of this word
              // here as it is a valid name
...
  /// handling last name input.
  Container _lastNameTextFormField() {
    return Container(
      width: MediaQuery.of(context).size.width * 0.45,
      decoration: BoxDecoration(),
      child: TextFormField(
        key: Key("Create.lastNameTextField"),
        autofillHints: [AutofillHints.familyName],
        cursorColor: FlutterFlowTheme.secondaryColor,
        validator: (value) {
          if (value == null || value.isEmpty) {
            return "Please provide a value";
          }
          var firstUpperCase = value.substring(0, 1).toUpperCase();
          if (!Validator.isValidName(value)) {
            return "Please provide a valid last name";
          } else if (value.substring(0, 1) != firstUpperCase) {
            return "Please capitalize your name";
          }
          if (Validator.hasProfanity(value)) {
            // We want to allow the use of this word
            // here as it is a valid name
...
      mainAxisSize: MainAxisSize.max,
      children: [
        Expanded(
          child: Padding(
            padding: EdgeInsetsDirectional.fromSTEB(20, 0, 25, 0),
            child: TextFormField(
              key: Key("Create.emailTextField"),
              autofillHints: [AutofillHints.email],
              cursorColor: FlutterFlowTheme.secondaryColor,
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return "Please provide a value";
                }
                if (!Validator.isValidEmail(value)) {
                  return "Please provide a valid email address";
                }
                return null;
              },
              keyboardType: TextInputType.emailAddress,
              controller: _emailController,
              obscureText: false,
...
      mainAxisSize: MainAxisSize.max,
      children: [
        Expanded(
          child: Padding(
            padding: EdgeInsetsDirectional.fromSTEB(20, 0, 25, 0),
            child: TextFormField(
              key: Key("Create.passwordTextField"),
              cursorColor: FlutterFlowTheme.secondaryColor,
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return "Please provide a value";
                }
                if (!Validator.isValidPassword(value)) {
                  return "Please provide a valid password";
                }
                return null;
              },
              controller: _passwordController,
              obscureText: !_passwordVisibility,
              decoration: InputDecoration(
...
              width: MediaQuery.of(context).size.width * 0.8,
              height: 30,
              decoration: BoxDecoration(
                color: Colors.white,
              ),
              child: Text('Confirm Password',
                  key: Key('Create.confirmPasswordLabel'),
                  style: FlutterFlowTheme.title3),
            ),
          )
        ],
      ),
    );
...
      mainAxisSize: MainAxisSize.max,
      children: [
        Expanded(
          child: Padding(
            padding: EdgeInsetsDirectional.fromSTEB(20, 0, 25, 0),
            child: TextFormField(
              key: Key("Create.confirmPasswordTextField"),
              cursorColor: FlutterFlowTheme.secondaryColor,
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return "Please provide a value";
                }
                if (value != _getPassword()) {
                  return "Passwords must match";
                }
                return null;
              },
              controller: _confirmPasswordController,
              obscureText: !_confirmPasswordVisibility,
              decoration: InputDecoration(
...
      padding: EdgeInsetsDirectional.fromSTEB(0, 40, 0, 0),
      child: Row(
        mainAxisSize: MainAxisSize.max,
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          FFButtonWidget(
            key: Key("Create.createAcctButton"),
            onPressed: () async {
              _verifyAPFPCredentials();
            },
            text: 'Create Account',
            options: FFButtonOptions(
              width: 200,
...
