...
    return Text(text, style: style);
  }

  /// When pressed, the user is taken back to Settings.
  InkWell _goBackButton() {
    return InkWell(
        key: Key("SetGoal.goBackBTN"),
        onTap: () => Navigator.pop(context),
        child: Text('< Go Back', style: FlutterFlowTheme.subtitle2));
  }

  /// Button to allow a user to switch between daily or weekly goals.
  Padding _switchGoalViewBTN() {
...
              key: _exerciseFormKey,
              child: Row(
                children: [
                  _goalTextField(
                      hintText: "Total Minutes",
                      contr: _exerciseGoalController!,
                      key: Key("SetGoal.exerciseGoalTextField_daily")),
                  _setGoalButton(_exerciseFormKey, () async {
                    await FireStore.updateGoalData({
                      "exerciseTimeEndGoal": double.parse(
                          _exerciseGoalController!.text.toString()),
                      "isExerciseTimeGoalSet": true
                    });
                  }, key: Key("SetGoal.setExerciseGoalBTN_daily")),
                  _deleteGoalIcon(onTap: () async {
                    await FireStore.updateGoalData({
                      "exerciseTimeEndGoal": 0.0,
                      "isExerciseTimeGoalSet": false
                    }).then((value) {
                      _exerciseGoalController!.text = '';
...
