...
    );
  }

  /// The view displayed in the 'Time' tab of the [_goalsTabbedContainer].
  InkWell _exerciseTimeView() {
    return HPGraphic.createView(
        key: Key("Home.exerciseView"),
        isGoalSet: (Goal.isExerciseTimeGoalSet),
        isHealthAppSynced: true,
        scrollController: _exerciseTimeViewSC,
        onLongPress: () {
          SetGoalsWidget.launch(context);
        },
...
